Optimize deployment requirements for Render (CPU Torch + DuckDuckGo)

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,11 +1,14 @@
+
 fastapi
 uvicorn
 scikit-learn
 pandas
 numpy
 transformers
-torch
+torch --extra-index-url https://download.pytorch.org/whl/cpu
 joblib
 pydantic
 python-multipart
 nltk
+duckduckgo-search
+mnb
